Update background image and Telegram link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             height: 100%;
             background-image: linear-gradient(to top, rgba(26, 26, 46, 1), transparent 50%, rgba(26, 26, 46, 1)),
                               linear-gradient(rgba(26, 26, 46, 0), rgba(26, 26, 46, 0) 50%, rgba(26, 26, 46, 0.7)),
-                              url('https://i.ibb.co/ccvSfNKt/f8373d322110e98419d228013b405636.jpg');
+                              url('https://i.ibb.co/cS8PcBt1/aa549cc98e768e0b1570081c16a7d103.jpg');
             background-size: cover;
             background-position: center;
             z-index: 1;
@@ -239,7 +239,7 @@
                 <h1>Hello, I'm MARO</h1>
                 <p>We provide Tech & IT Services in all technical fields.</p>
                 <div class="hero-buttons">
-                    <a href="https://t.me/AAEDTT" class="btn" target="_blank">Contact via Telegram</a>
+                    <a href="https://t.me/HXE_X" class="btn" target="_blank">Contact via Telegram</a>
                     <a href="https://whatsapp.com/channel/0029VbB3ZvnLNSa2noBP6g1s" class="btn" target="_blank">WhatsApp Channel</a>
                 </div>
             </div>
